--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <div class="wrapper d-flex f-column">
         <div class="upper-conten d-flex debug">
             <div id="sidebar" class="debug">
-
             </div>
             <main class="debug">
                 <div class="sticky debug">
@@ -26,8 +25,23 @@
                     </button>
                 </div>
                 <div class="main-content"></div>
-                <nav></nav>
-        
+                <nav class="nav-bar d-flex j-content debug">
+                    <ul>
+                        <li><a><href="#">IN EVIDENZA</a></li>
+                        <li><a><href="#">PODCAST</a></li>
+                        <li><a><href="#">CLASSIFICHE</a></li>
+                        <li><a><href="#">GENERI E MOOD</a></li>
+                        <li><a><href="#">NUOVE USCITE</a></li>
+                        <li><a><href="#">SCOPRI</a></li>
+                    </ul>
+                </nav>
+                <section>
+                    <h2 class="debug">Recently played</h2>
+                    <div class="car-img d-flex">
+
+                    </div>
+
+                </section>        
             </main>
 
         </div>
