--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 
 <body>
     <div class="wrapper d-flex f-column">
-        <div class="upper-conten d-flex debug">
+        <div class="upper-conten d-flex">
             <div id="sidebar" class="debug">
             </div>
-            <main class="debug">
-                <div class="sticky debug">
+            <main>
+                <div class="sticky">
                     <button class="button-sticky">
                         EFFETTUA L'UPGRADE
                     </button>
                 </div>
                 <div class="main-content"></div>
-                <nav class="nav-bar d-flex j-content debug">
+                <nav class="nav-bar d-flex j-content">
                     <ul>
                         <li><a href="#"><strong>IN EVIDENZA</strong></a></li>                            
                         <li><a href="#"><strong>PODCAST</strong></a></li>                            
@@ -38,65 +38,65 @@
                     </ul>
                 </nav>
                 <section>
-                    <h2 class="debug">Recently played</h2>
+                    <h2>Recently played</h2>
                     <div class="d-flex columns">
-                        <div class="column p-15 debug">
-                            <div class="car-img d-flex debug">
+                        <div class="column p-15">
+                            <div class="car-img d-flex">
                                 <img src="./img/metal_lifting.jpg" alt="metal">
                                 <i class="fa-regular fa-circle-play hover-icon"></i>
                             </div>
-                            <div class="text-card debug">
+                            <div class="text-card">
                                 <h4 class="p-20 d-flex j-content a-center">Heavy Metal</h4>
                                 <p class="d-flex j-content">Subtitle</p>
                             </div>
                         </div>
-                        <div class="column p-15 debug">
-                            <div class="car-img d-flex debug">
+                        <div class="column p-15">
+                            <div class="car-img d-flex">
                                 <img src="./img/stranger.jpeg" alt="stranger">
                                 <i class="fa-regular fa-circle-play hover-icon"></i>
                             </div>
-                            <div class="text-card debug">
+                            <div class="text-card">
                                 <h4 class="p-20 d-flex j-content a-center">Stranger Things, Vol. 1 (a Netflix Original
                                     Series Soundtrack)</h4>
                                 <p class="d-flex j-content">Kyle Dixson & Michael Stein</p>
                             </div>
                         </div>
-                        <div class="column p-15 debug">
-                            <div class="car-img d-flex debug">
+                        <div class="column p-15">
+                            <div class="car-img d-flex">
                                 <img src="./img/aquietplace.jpeg" alt="aquietplace">
                                 <i class="fa-regular fa-circle-play hover-icon"></i>
                             </div>
-                            <div class="text-card debug">
+                            <div class="text-card">
                                 <h4 class="p-20 d-flex j-content a-center">A quiet place</h4>
                                 <p class="d-flex j-content">Subtitle</p>
                             </div>
                         </div>
-                        <div class="column p-15 debug">
-                            <div class="car-img d-flex debug">
+                        <div class="column p-15">
+                            <div class="car-img d-flex">
                                 <img src="./img/split.jpeg" alt="split">
                                 <i class="fa-regular fa-circle-play hover-icon"></i>
                             </div>
-                            <div class="text-card debug">
+                            <div class="text-card">
                                 <h4 class="p-20 d-flex j-content a-center">Split</h4>
                                 <p class="d-flex j-content">Subtitle</p>
                             </div>
                         </div>
-                        <div class="column p-15 debug">
-                            <div class="car-img d-flex debug">
+                        <div class="column p-15">
+                            <div class="car-img d-flex">
                                 <img src="./img/cure.jpeg" alt="cure">
                                 <i class="fa-regular fa-circle-play hover-icon"></i>
                             </div>
-                            <div class="text-card debug">
+                            <div class="text-card">
                                 <h4 class="p-20 d-flex j-content a-center">A cure for wellnes</h4>
                                 <p class="d-flex j-content">Subtitle</p>
                             </div>
                         </div>
-                        <div class="column p-15 debug">
-                            <div class="car-img d-flex debug">
+                        <div class="column p-15">
+                            <div class="car-img d-flex">
                                 <img src="./img/sinister.jpeg" alt="sinister">
                                 <i class="fa-regular fa-circle-play hover-icon"></i>
                             </div>
-                            <div class="text-card debug">
+                            <div class="text-card">
                                 <h4 class="p-20 d-flex j-content a-center">Sister</h4>
                                 <p class="d-flex j-content">Subtitle</p>
                             </div>
@@ -106,50 +106,50 @@
 
                 <section>
                     <div>
-                        <h2 class="debug">Creato per JOHN doe</h2>
+                        <h2>Creato per JOHN doe</h2>
                         <p>Più ascolti, più accurati saranno i suggerimenti.</p>
                     </div>
                     <div class="d-flex">
-                        <div class="column p-15 debug">
-                            <div class="car-img d-flex debug">
+                        <div class="column p-15">
+                            <div class="car-img d-flex">
                                 <img src="./img/radar.jpeg" alt="radar">
                                 <i class="fa-regular fa-circle-play hover-icon"></i>
                             </div>
-                            <div class="text-card debug">
+                            <div class="text-card">
                                 <h4 class="p-20 d-flex j-content a-center">Relese Radar</h4>
                             </div>
                         </div>
-                        <div class="column p-15 debug">
-                            <div class="car-img d-flex debug">
+                        <div class="column p-15">
+                            <div class="car-img d-flex">
                                 <img src="./img/mixdaily.jpeg" alt="mixdaily">
                                 <i class="fa-regular fa-circle-play hover-icon"></i>
                             </div>
-                            <div class="text-card debug">
+                            <div class="text-card">
                                 <h4 class="p-20 d-flex j-content a-center">Dally Mix 1</h4>
                             </div>
                         </div>
                 </section>
                 <section>
                     <div>
-                        <h2 class="debug">Artisti più popolari</h2>
+                        <h2>Artisti più popolari</h2>
                         <p>Più ascolti, più accurati saranno i suggerimenti.</p>
                     </div>
                     <div class="d-flex">
-                        <div class="column p-15 debug">
-                            <div class="car-img d-flex j-content a-center debug">
+                        <div class="column p-15">
+                            <div class="car-img d-flex j-content a-center">
                                 <img id="img-circle" src="./img/youg.jpeg" alt="youg">
                                 <i class="fa-regular fa-circle-play hover-icon"></i>
                             </div>
-                            <div class="text-card debug">
+                            <div class="text-card">
                                 <h4 class="p-20 d-flex j-content a-center">Lana Del Rey</h4>
                             </div>
                         </div>
-                        <div class="column p-15 debug">
-                            <div class="car-img d-flex j-content a-center debug">
+                        <div class="column p-15">
+                            <div class="car-img d-flex j-content a-center">
                                 <img id="img-circle" src="./img/einaudi.jpeg" alt="einaudi">
                                 <i class="fa-regular fa-circle-play hover-icon"></i>
                             </div>
-                            <div class="text-card debug">
+                            <div class="text-card">
                                 <h4 class="p-20 d-flex j-content a-center">Einaudi</h4>
                             </div>
                         </div>
