--- a/index.html
+++ b/index.html
@@ -19,25 +19,51 @@
     <div class="wrapper d-flex f-column">
         <div class="upper-conten d-flex">
             <div id="sidebar" class="debug">
+                <div class="sidebar-top debug">
+                    <div id="logo" class="debug">
+                        <img src="./img/logo.svg" alt="Logo Spotify">
+                    </div>
+                    <nav class="main-nav">
+                        <ul>
+                            <li>
+                                <div id="border-green" ><img src="./img/home.svg" alt="icon home"></div>
+                                <span><a href="#">Home</span></a>
+                            </li>
+                            <li>
+                                <div><img src="./img/search.svg" alt="search"></div>
+                                <span><a href="#">Cerca</span></a>
+                            </li>
+                            <li>
+                                <div><img src="./img/libreria.svg" alt="bookshelf"></div>
+                                <span><a href="#">La tua libreria</span></a>
+                            </li>
+                        </ul>
+                    </nav>
+
+                </div>
+
+                <div class="sidebar-bottom debug">
+                    bsgb
+                </div>
             </div>
             <main>
                 <div class="sticky">
                     <button class="button-sticky">
-                        EFFETTUA L'UPGRADE
+                        <a href="#">EFFETTUA L'UPGRADE</a>
                     </button>
                 </div>
                 <div class="main-content"></div>
-                <nav class="nav-bar d-flex j-content">
-                    <ul>
-                        <li><a href="#"><strong>IN EVIDENZA</strong></a></li>                            
-                        <li><a href="#"><strong>PODCAST</strong></a></li>                            
-                        <li><a href="#"><strong>CLASSIFICHE</strong></a></li>                            
-                        <li><a href="#"><strong>GENERI E MOOD</strong></a></li>                            
-                        <li><a href="#"><strong>NUOVE USCITE</strong></a></li>                            
-                        <li><a href="#"><strong>SCOPRI</strong></a></li>                            
+                <nav class="nav-bar d-flex j-center">
+                    <ul class="d-flex j-center f-wrap">
+                        <li><a href="#" class="active"><strong>IN EVIDENZA</strong></a></li>
+                        <li><a href="#"><strong>PODCAST</strong></a></li>
+                        <li><a href="#"><strong>CLASSIFICHE</strong></a></li>
+                        <li><a href="#"><strong>GENERI E MOOD</strong></a></li>
+                        <li><a href="#"><strong>NUOVE USCITE</strong></a></li>
+                        <li><a href="#"><strong>SCOPRI</strong></a></li>
                     </ul>
                 </nav>
-                <section>
+                <section class="p-10">
                     <h2>Recently played</h2>
                     <div class="d-flex columns">
                         <div class="column p-15">
@@ -46,8 +72,12 @@
                                 <i class="fa-regular fa-circle-play hover-icon"></i>
                             </div>
                             <div class="text-card">
-                                <h4 class="p-20 d-flex j-content a-center">Heavy Metal</h4>
-                                <p class="d-flex j-content">Subtitle</p>
+                                <div class="d-flex a-center j-content">
+                                    <h4 class="p-20 m-auto ">Heavy Metal</h4>
+                                </div>
+                                <div class="d-flex a-center j-content">
+                                    <p class="m-auto">Subtitle</p>
+                                </div>
                             </div>
                         </div>
                         <div class="column p-15">
@@ -56,9 +86,13 @@
                                 <i class="fa-regular fa-circle-play hover-icon"></i>
                             </div>
                             <div class="text-card">
-                                <h4 class="p-20 d-flex j-content a-center">Stranger Things, Vol. 1 (a Netflix Original
-                                    Series Soundtrack)</h4>
-                                <p class="d-flex j-content">Kyle Dixson & Michael Stein</p>
+                                <div class="d-flex a-center j-content">
+                                    <h4 class="p-20 m-auto">Stranger Things, Vol. 1 (a Netflix
+                                        Original Series Soundtrack)</h4>
+                                </div>
+                                <div class="d-flex a-center j-content">
+                                    <p class="m-auto">Kyle Dixson & Michael Stein</p>
+                                </div>
                             </div>
                         </div>
                         <div class="column p-15">
@@ -67,8 +101,12 @@
                                 <i class="fa-regular fa-circle-play hover-icon"></i>
                             </div>
                             <div class="text-card">
-                                <h4 class="p-20 d-flex j-content a-center">A quiet place</h4>
-                                <p class="d-flex j-content">Subtitle</p>
+                                <div class="d-flex a-center j-content">
+                                    <h4 class="p-20 m-auto">A quiet place</h4>
+                                </div>
+                                <div class="d-flex a-center j-content">
+                                    <p class="m-auto">Subtitle</p>
+                                </div>
                             </div>
                         </div>
                         <div class="column p-15">
@@ -77,8 +115,12 @@
                                 <i class="fa-regular fa-circle-play hover-icon"></i>
                             </div>
                             <div class="text-card">
-                                <h4 class="p-20 d-flex j-content a-center">Split</h4>
-                                <p class="d-flex j-content">Subtitle</p>
+                                <div class="d-flex a-center j-content">
+                                    <h4 class="p-20 m-auto">Split</h4>
+                                </div>
+                                <div class="d-flex a-center j-content">
+                                    <p class="m-auto">Subtitle</p>
+                                </div>
                             </div>
                         </div>
                         <div class="column p-15">
@@ -87,8 +129,12 @@
                                 <i class="fa-regular fa-circle-play hover-icon"></i>
                             </div>
                             <div class="text-card">
-                                <h4 class="p-20 d-flex j-content a-center">A cure for wellnes</h4>
-                                <p class="d-flex j-content">Subtitle</p>
+                                <div class="d-flex a-center j-content">
+                                    <h4 class="p-20 m-auto">A cure for wellnes</h4>
+                                </div>
+                                <div class="d-flex a-center j-content">
+                                    <p class="m-auto">Subtitle</p>
+                                </div>
                             </div>
                         </div>
                         <div class="column p-15">
@@ -97,63 +143,69 @@
                                 <i class="fa-regular fa-circle-play hover-icon"></i>
                             </div>
                             <div class="text-card">
-                                <h4 class="p-20 d-flex j-content a-center">Sister</h4>
-                                <p class="d-flex j-content">Subtitle</p>
+                                <div class="d-flex a-center j-content">
+                                    <h4 class="p-20 m-auto">Sister</h4>
+                                </div>
+                                <div class="d-flex a-center j-content">
+                                    <p class="m-auto">Subtitle</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </section>
-
-                <section>
-                    <div>
-                        <h2>Creato per JOHN doe</h2>
-                        <p>Più ascolti, più accurati saranno i suggerimenti.</p>
-                    </div>
-                    <div class="d-flex">
-                        <div class="column p-15">
-                            <div class="car-img d-flex">
-                                <img src="./img/radar.jpeg" alt="radar">
-                                <i class="fa-regular fa-circle-play hover-icon"></i>
-                            </div>
-                            <div class="text-card">
-                                <h4 class="p-20 d-flex j-content a-center">Relese Radar</h4>
-                            </div>
+                <section class="p-10">
+                    <section>
+                        <div>
+                            <h2>Creato per JOHN doe</h2>
+                            <p>Più ascolti, più accurati saranno i suggerimenti.</p>
                         </div>
-                        <div class="column p-15">
-                            <div class="car-img d-flex">
-                                <img src="./img/mixdaily.jpeg" alt="mixdaily">
-                                <i class="fa-regular fa-circle-play hover-icon"></i>
+                        <div class="d-flex">
+                            <div class="column p-15">
+                                <div class="car-img d-flex">
+                                    <img src="./img/radar.jpeg" alt="radar">
+                                    <i class="fa-regular fa-circle-play hover-icon"></i>
+                                </div>
+                                <div class="text-card">
+                                    <div class="d-flex a-center j-content">
+                                        <h4 class="p-20 m-auto">Relese Radar</h4>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="text-card">
-                                <h4 class="p-20 d-flex j-content a-center">Dally Mix 1</h4>
+                            <div class="column p-15">
+                                <div class="car-img d-flex">
+                                    <img src="./img/mixdaily.jpeg" alt="mixdaily">
+                                    <i class="fa-regular fa-circle-play hover-icon"></i>
+                                </div>
+                                <div class="d-flex a-center j-content">
+                                    <h4 class="p-20 m-auto">Dally Mix 1</h4>
+                                </div>
                             </div>
+                    </section>
+                    <section class="p-10">
+                        <div>
+                            <h2>Artisti più popolari</h2>
+                            <p>Più ascolti, più accurati saranno i suggerimenti.</p>
                         </div>
-                </section>
-                <section>
-                    <div>
-                        <h2>Artisti più popolari</h2>
-                        <p>Più ascolti, più accurati saranno i suggerimenti.</p>
-                    </div>
-                    <div class="d-flex">
-                        <div class="column p-15">
-                            <div class="car-img d-flex j-content a-center">
-                                <img id="img-circle" src="./img/youg.jpeg" alt="youg">
-                                <i class="fa-regular fa-circle-play hover-icon"></i>
+                        <div class="d-flex">
+                            <div class="column p-15">
+                                <div class="car-img d-flex j-content a-center">
+                                    <img id="img-circle" src="./img/youg.jpeg" alt="youg">
+                                    <i class="fa-regular fa-circle-play hover-icon"></i>
+                                </div>
+                                <div class="d-flex a-center j-content">
+                                    <h4 class="p-20 m-auto">Lana Del Rey</h4>
+                                </div>
                             </div>
-                            <div class="text-card">
-                                <h4 class="p-20 d-flex j-content a-center">Lana Del Rey</h4>
+                            <div class="column p-15">
+                                <div class="car-img d-flex j-content a-center">
+                                    <img id="img-circle" src="./img/einaudi.jpeg" alt="einaudi">
+                                    <i class="fa-regular fa-circle-play hover-icon"></i>
+                                </div>
+                                <div class="d-flex a-center j-content">
+                                    <h4 class="p-20 m-auto">Ludivico Einaudi</h4>
+                                </div>
                             </div>
-                        </div>
-                        <div class="column p-15">
-                            <div class="car-img d-flex j-content a-center">
-                                <img id="img-circle" src="./img/einaudi.jpeg" alt="einaudi">
-                                <i class="fa-regular fa-circle-play hover-icon"></i>
-                            </div>
-                            <div class="text-card">
-                                <h4 class="p-20 d-flex j-content a-center">Einaudi</h4>
-                            </div>
-                        </div>
-                </section>
+                    </section>
         </div>
         </section>
         </main>
