--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 <body>
     <div class="wrapper d-flex f-column">
         <div class="upper-conten d-flex">
-            <div id="sidebar" class="debug">
+            <div id="sidebar">
                 <div class="sidebar-top debug">
-                    <div id="logo" class="debug">
+                    <div id="logo">
                         <img src="./img/logo.svg" alt="Logo Spotify">
                     </div>
                     <nav class="main-nav">
                         <ul>
                             <li>
-                                <div id="border-green" ><img src="./img/home.svg" alt="icon home"></div>
+                                <div id="border-green"><img src="./img/home.svg" alt="icon home"></div>
                                 <span><a href="#">Home</span></a>
                             </li>
                             <li>
@@ -39,11 +39,48 @@
                             </li>
                         </ul>
                     </nav>
-
+                    <div class="playlist-nav d-flex f-column">
+                        <h3>PLAYLIST</h3>
+                        <div class="d-flex a-center">
+                            <div class="square">
+                                <i class="fa-solid fa-plus"></i>
+                            </div>
+                            <span>Crea Playlist</span>
+                        </div>
+                        <ul class="list-playlist">
+                            <li>
+                                <span><a href="#">Name Playlist</span></a></span>
+                            </li>
+                            <li>
+                                <span><a href="#">Name Playlist</span></a></span>
+                            </li>
+                            <li>
+                                <span><a href="#">Name Playlist</span></a></span>
+                            </li>
+                            <li>
+                                <span><a href="#">Name Playlist</span></a></span>
+                            </li>
+                            <li>
+                                <span><a href="#">Name Playlist</span></a></span>
+                            </li>
+                            <li>
+                                <span><a href="#">Name Playlist</span></a></span>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-
-                <div class="sidebar-bottom debug">
-                    bsgb
+                <div class="sidebar-bottom">
+                    <div class="d-flex">
+                        <div class="d-flex circle-arrow">
+                            <i class="fa-solid fa-arrow-down"></i>
+                        </div>
+                        <span>Installa app</span>
+                    </div> 
+                    <hr>
+                    <div class="d-flex user">
+                        <i class="fa-regular fa-user"></i>
+                        <span><strong>John Doe</strong></span>
+                    </div>
                 </div>
             </div>
             <main>
@@ -156,7 +193,7 @@
                 <section class="p-10">
                     <section>
                         <div>
-                            <h2>Creato per JOHN doe</h2>
+                            <h2>Creato per John Doe</h2>
                             <p>Più ascolti, più accurati saranno i suggerimenti.</p>
                         </div>
                         <div class="d-flex">
