--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <i class="fa-solid fa-arrow-down"></i>
                         </div>
                         <span>Installa app</span>
-                    </div> 
+                    </div>
                     <hr>
                     <div class="d-flex user">
                         <i class="fa-regular fa-user"></i>
@@ -247,7 +247,35 @@
         </section>
         </main>
         <footer class="debug">
+            <div class="d-flex container-left a-center debug">
+                <div class="d-flex debug">
+                    <div class="img-footer"><img src="./img/sinister.jpeg" alt="sinister footer"></div>
+                </div>
+                <div class="d-flex f-column margin-20 debug">
+                    <span><strong>Sinister</strong></span>
+                    <span id="d-flex" class="font-small">Brano Nome</span>
+                </div>
+                <div class="icon-sisters">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-folder"></i>
+                </div>
+            </div>
+                <div class="conteiner-center d-flex debug">
+                    <div>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>                
 
+                </div>
+                <div class="conteiner-right">
+
+                </div>
+            
         </footer>
 
     </div>
