fine esercizio sistemato

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                             </div>
                             <span class="no-span">Crea Playlist</span>
                         </div>
-                        <ul class="list-playlist">
+                        <div class="list-playlist" >
+                        <ul>
                             <li>
                                 <span class="no-span"><a href="#">Name Playlist</span></a></span>
                             </li>
@@ -68,6 +69,7 @@
                                 <span class="no-span"><a href="#">Name Playlist</span></a></span>
                             </li>
                         </ul>
+                    </div>
                     </div>
                 </div>
                 <div class="sidebar-bottom">
@@ -111,7 +113,7 @@
                             </div>
                             <div class="text-card">
                                 <div class="d-flex a-center j-content">
-                                    <h4 class="p-20 m-auto ">Heavy Metal</h4>
+                                    <h4 class="p-20 m-auto">Heavy Metal</h4>
                                 </div>
                                 <div class="d-flex a-center j-content">
                                     <p class="m-auto">Subtitle</p>
@@ -129,7 +131,7 @@
                                         Original Series Soundtrack)</h4>
                                 </div>
                                 <div class="d-flex a-center j-content">
-                                    <p class="m-auto">Kyle Dixson & Michael Stein</p>
+                                    <p class="m-auto t-align">Kyle Dixson & Michael Stein</p>
                                 </div>
                             </div>
                         </div>
@@ -219,7 +221,7 @@
                                 </div>
                             </div>
                     </section>
-                    <section class="p-20">
+                    <section>
                         <div>
                             <h2>Artisti più popolari</h2>
                             <p>Più ascolti, più accurati saranno i suggerimenti.</p>
